--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ body {
 
 h1 {
     color: red;
+
 }
 .container-flex {
     display: flex;
@@ -17,4 +18,7 @@ h1 {
     align-items: center;
     height: 100vh;
 
+}
+h2 {
+    color: green;
 }
